# health-insight-dashboard

./: .dockerignore  .gitignore  DEPLOYMENT.md  GROQ_API_KEY_FIX.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  docker-compose.yml  render.yaml  requirements.txt  test_backend.py  vercel.json
app/: main.py
app/routes/: vaccines.py
app/services/: data_service.py
backend/: .dockerignore  .gitignore  Dockerfile  check_groq_key.py  main.py  pyproject.toml  test_api_key.py  test_predictions.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  ai.py  summary.py  vaccines.py
backend/app/api/schemas/: vaccine.py
backend/app/core/: config.py
backend/app/models/: __init__.py  vaccine.py
backend/app/repositories/: __init__.py  vaccine_repository.py
backend/app/services/: __init__.py  ai_service.py  vaccine_service.py
backend/app/utils/: __init__.py
backend/data/: vaccine_market_dataset.csv
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AIChat.tsx  Charts.tsx  FilterPanel.tsx  KPICard.tsx  Predictions.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
